RESOLVED FIXED283535
AX: Test output for attributed strings is missing many style attributes (text color, text shadow, sub/superscript, underline, and linethrough), meaning we have no test coverage for them
https://bugs.webkit.org/show_bug.cgi?id=283535
Summary AX: Test output for attributed strings is missing many style attributes (text...
Tyler Wilcock
Reported 2024-11-21 17:05:44 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-11-21 17:12:33 PST
Tyler Wilcock
Comment 2 2024-11-21 17:15:30 PST
EWS
Comment 3 2024-11-22 11:51:32 PST
Committed 286974@main (0fc4a7ef39c0): <https://commits.webkit.org/286974@main> Reviewed commits have been landed. Closing PR #36988 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.