AX: Test output for attributed strings is missing many style attributes (text color, text shadow, sub/superscript, underline, and linethrough), meaning we have no test coverage for them https://bugs.webkit.org/show_bug.cgi?id=283535 rdar://problem/140385001

Reviewed by Chris Fleizach.

With this commit, we now output foreground text color and background color, text shadow, sub/superscript, underline,
and linethrough styles for attributed strings. This will allow us to write tests ensuring their presence or lack thereof.

* LayoutTests/accessibility/mac/attributed-string-for-text-marker-range-using-webarea-expected.txt:
* LayoutTests/accessibility/mac/attributed-string/attributed-string-for-range-with-options.html:
* LayoutTests/accessibility/mac/attributed-string/attributed-string-for-range.html:
* LayoutTests/accessibility/mac/attributed-string/attributed-string-text-styling.html:
* LayoutTests/accessibility/mac/content-editable-attributed-string-expected.txt:
* LayoutTests/platform/mac/accessibility/mac/selected-text-range-unconnected-object-expected.txt:
Fix some tests that expected some hardcoded output, as there are now more attributes included in the output.

* Tools/DumpRenderTree/mac/AccessibilityUIElementMac.mm:
(descriptionForColor):
(appendColorDescription):
(createJSStringRef):
* Tools/WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm:
(WTR::descriptionForColor):
(WTR::appendColorDescription):
(WTR::createJSStringRef):

Canonical link: https://commits.webkit.org/286974@main