Tools/DumpRenderTree/mac/AccessibilityUIElementMac.mm
@@ -1865,21 +1865,72 @@ JSRetainPtr<JSStringRef> AccessibilityUIElement::stringForTextMarkerRange(Access
     return nullptr;
 }
 
+static NSString *descriptionForColor(CGColorRef color)
+{
+    // This is a hack to get an OK description for a CGColor by crudely parsing its debug description, e.g.:
+    //
+    // <CGColor 0x13bf07670> <CGColorSpace 0x12be0ce40> [ (kCGColorSpaceICCBased; kCGColorSpaceModelRGB; sRGB IEC61966-2.1)] ( 0 0 0 0 )
+    // Ideally we convert it to a WebCore::Color and then call serializationForCSS(const Color&), but I can't
+    // get that to link succesfully, despite these symbols being WEBCORE_EXPORTed.
+    auto string = adoptNS([[NSMutableString alloc] init]);
+    [string appendFormat:@"%@", color];
+    NSArray *stringComponents = [string componentsSeparatedByString:@">"];
+    if (stringComponents.count)
+        return [[stringComponents objectAtIndex:stringComponents.count - 1] stringByReplacingOccurrencesOfString:@"]" withString:@""];
+    return nil;
+}
+
+static void appendColorDescription(RetainPtr<NSMutableString> string, NSString* attributeKey, NSDictionary<NSString *, id> *attributes)
+{
+    id color = [attributes objectForKey:attributeKey];
+    if (!color)
+        return;
+
+    if (CFGetTypeID(color) == CGColorGetTypeID())
+        [string appendFormat:@"%@:%@\n", attributeKey, descriptionForColor((CGColorRef)color)];
+}
+
 static JSRetainPtr<JSStringRef> createJSStringRef(id string)
 {
-    if (!string)
-        return nullptr;
     auto mutableString = adoptNS([[NSMutableString alloc] init]);
-    id attributes = [string attributesAtIndex:0 effectiveRange:nil];
-    id attributeEnumerationBlock = ^(NSDictionary<NSString *, id> *attrs, NSRange range, BOOL *stop) {
-        BOOL misspelled = [[attrs objectForKey:NSAccessibilityMisspelledTextAttribute] boolValue];
+    id attributeEnumerationBlock = ^(NSDictionary<NSString *, id> *attributes, NSRange range, BOOL *stop) {
+        [mutableString appendFormat:@"Attributes in range %@:\n", NSStringFromRange(range)];
+        BOOL misspelled = [[attributes objectForKey:NSAccessibilityMisspelledTextAttribute] boolValue];
         if (misspelled)
-            misspelled = [[attrs objectForKey:NSAccessibilityMarkedMisspelledTextAttribute] boolValue];
+            misspelled = [[attributes objectForKey:NSAccessibilityMarkedMisspelledTextAttribute] boolValue];
         if (misspelled)
             [mutableString appendString:@"Misspelled, "];
-        id font = [attributes objectForKey:(__bridge NSString *)kAXFontTextAttribute];
+        id font = [attributes objectForKey:(__bridge id)kAXFontTextAttribute];
         if (font)
-            [mutableString appendFormat:@"%@ - %@, ", (__bridge NSString *)kAXFontTextAttribute, font];
+            [mutableString appendFormat:@"%@: %@\n", (__bridge id)kAXFontTextAttribute, font];
+
+        appendColorDescription(mutableString, NSAccessibilityForegroundColorTextAttribute, attributes);
+        appendColorDescription(mutableString, NSAccessibilityBackgroundColorTextAttribute, attributes);
+
+        int scriptState = [[attributes objectForKey:NSAccessibilitySuperscriptTextAttribute] intValue];
+        if (scriptState == -1) {
+            // -1 == subscript
+            [mutableString appendFormat:@"%@: -1\n", NSAccessibilitySuperscriptTextAttribute];
+        } else if (scriptState == 1) {
+            // 1 == superscript
+            [mutableString appendFormat:@"%@: 1\n", NSAccessibilitySuperscriptTextAttribute];
+        }
+
+        BOOL hasTextShadow = [[attributes objectForKey:NSAccessibilityShadowTextAttribute] boolValue];
+        if (hasTextShadow)
+            [mutableString appendFormat:@"%@: YES\n", NSAccessibilityShadowTextAttribute];
+
+        BOOL hasUnderline = [[attributes objectForKey:NSAccessibilityUnderlineTextAttribute] boolValue];
+        if (hasUnderline) {
+            [mutableString appendFormat:@"%@: YES\n", NSAccessibilityUnderlineTextAttribute];
+            appendColorDescription(mutableString, NSAccessibilityUnderlineColorTextAttribute, attributes);
+        }
+
+        BOOL hasLinethrough = [[attributes objectForKey:NSAccessibilityStrikethroughTextAttribute] boolValue];
+        if (hasLinethrough) {
+            [mutableString appendFormat:@"%@: YES\n", NSAccessibilityStrikethroughTextAttribute];
+            appendColorDescription(mutableString, NSAccessibilityStrikethroughColorTextAttribute, attributes);
+        }
     };
     [string enumerateAttributesInRange:NSMakeRange(0, [string length]) options:(NSAttributedStringEnumerationOptions)0 usingBlock:attributeEnumerationBlock];
     [mutableString appendString:[string string]];
